# qr_ws

./: .gitignore  README.md
dinasour/: CMakeLists.txt  controller_plugins.xml
dinasour/src/: position_joint_group_controller.cpp  test.cpp
dinasour_reconstruction/: package.xml
dinasour_reconstruction/launch/: position_joint_group_controller.launch
dinasour_reconstruction/src/: position_joint_group_controller.cpp
dinosaurrobot-4-26/Project/: JLinkLog.txt  Template.uvguix.Administrator  Template.uvguix.hq  Template.uvoptx  Template.uvprojx  control.c  control.h  iwdg.c  iwdg.h  main.c  main.h  stm32f10x.h  stm32f10x_it.c  system_stm32f10x.c
dragon_description/launch/: dinasour.launch  dragon.launch  dragon_three_dof.launch  position_mode.launch  single_leg.launch
dragon_description/urdf/: dinasour.gazebo.xacro  dinasour.xacro  dragon (6th copy).urdf  dragon.urdf  dragon_three_dof.gazebo.xacro  dragon_three_dof.transmission.xacro  dragon_three_dof.urdf.xacro  dragon_three_dof.world  materials.xacro  old_dragon_three_dof.urdf  position_mode.urdf  single_leg.urdf.xacro  single_leg.xacro  unsed_LittleDog.urdf
dragon_driver/: package.xml
dragon_driver/config/: robot_specification.xml
dragon_driver/launch/: dragon_driver.launch
dragon_gazebo/launch/: qr_gazebo.launch
dragon_single_leg/: CMakeLists.txt  Readme.md  controller_plugins.xml
dragon_single_leg/include/dragon_single_leg/: position_controller.h  ultility.h
dragon_single_leg/launch/: position_controller.launch
dragon_single_leg/src/: position_controller.cpp  test  test.h
qr_control/: CMakeLists.txt  controller_plugins.xml  package.xml  paras.txt
qr_control/config/: cmd.yaml  joint_group.yaml  position_joint_group_controller.yaml  test_parameters.yaml
qr_control/include/qr_control/: position_joint_group_controller.h  position_reset.h  qr_walk_scheduler.h  ultility.h  util.h
qr_control/launch/: cmd_jnts.launch  position_joint_group_controller.launch  position_joint_group_controller.yaml  position_reset.launch  qr_walk.launch  test_qr_walk.launch
qr_control/src/: position_joint_group_controller.cpp  position_reset.cpp  qr_walk_scheduler.cpp  test  test.h  testKDL.cpp  test_4_qr_walker.cpp  test_4_qr_walker.h
qr_data_write/: mainpage.dox  manifest.xml
qr_data_write/data/: cmd-1495162273.27.txt  state-1495162273.27.txt
qr_description/: CMakeLists.txt  package.xml
qr_description/launch/: LittleDog.launch  dinasour.launch  dragon_three_dof.launch  single_leg.launch  test.launch  upload_robot.launch
qr_description/urdf/: dinasour.transmission.xacro  dinasour.urdf.xacro  dinasour.xacro  dragon.gazebo  dragon.gv  dragon.transmission  dragon.urdf  dragon_three_dof.gazebo.xacro  dragon_three_dof.xacro  single_leg.gazebo.xacro  single_leg.transmission.xacro  single_leg.urdf.xacro  single_leg.xacro  test.urdf
qr_driver/: CMakeLists.txt  package.xml
qr_driver/config/: controllers.yaml  robot_specification.xml
qr_driver/launch/: dragon_driver.launch
qr_driver/src/: main.cpp
qr_gazebo/: CMakeLists.txt  package.xml
qr_gazebo/launch/: dragon_only_controllers.launch  dragon_only_gazebo.launch  qr_gazebo.launch  single_leg_gazebo.launch
qr_single_leg/: CMakeLists.txt  controller_plugins.xml  package.xml
qr_single_leg/src/: test.cpp  (+2 more)
qr_visualization/: qr_visualization.wpr  qr_visualization.wpu
qr_visualization/qr_plot/: CMakeLists.txt  package.xml  plugin.xml  setup.py
qr_visualization/qr_plot/scripts/: qr_plot
qr_visualization/qr_plot/src/qr_plot/: plot.py  plot_widget.py
qr_visualization/qr_plot/src/qr_plot/rqt_plot_foots/src/rqt_plot_lf_foot/: plot_widget.py
qr_visualization/qr_plot/src/qr_plot/rqt_plot_lb/src/rqt_plot_lb/: plot.py  plot_widget.py
qr_visualization/qr_plot/src/qr_plot/rqt_plot_lb_foot/src/rqt_plot_lf_foot/: plot_widget.py
qr_visualization/qr_plot/src/qr_plot/rqt_plot_legs/src/rqt_plot_legs/: plot.py  plot_widget.py
qr_visualization/qr_plot/src/qr_plot/rqt_plot_lf/src/rqt_plot_lf/: plot.py  plot_widget.py
qr_visualization/qr_plot/src/qr_plot/rqt_plot_lf/src/rqt_plot_lf/data_plot/: mat_data_plot.py
qr_visualization/qr_plot/src/qr_plot/rqt_plot_lf_foot/src/rqt_plot_lf_foot/: plot.py  plot_widget.py
qr_visualization/qr_plot/src/qr_plot/rqt_plot_rb/src/rqt_plot_rb/: plot.py  plot_widget.py
qr_visualization/qr_plot/src/qr_plot/rqt_plot_rb_foot/src/rqt_plot_lf_foot/: plot_widget.py
qr_visualization/qr_plot/src/qr_plot/rqt_plot_rf/src/rqt_plot_rf/: plot.py  plot_widget.py
qr_visualization/qr_plot/src/qr_plot/rqt_plot_rf_foot/src/rqt_plot_lf_foot/: plot_widget.py
qr_ws/: CMakeLists.txt  package.xml
(+92 files in other folders)
